--- a/demo/package.json
+++ b/demo/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.0",
     "@tailwindcss/vite": "^4.0.12",
     "@types/react-pdf": "^6.2.0",
     "pdfjs-dist": "^4.10.38",
@@ -17,6 +18,7 @@
     "react-dom": "^19.0.0",
     "react-pdf": "^9.2.1",
     "react-router-dom": "^7.3.0",
+    "swr": "^2.3.3",
     "tailwindcss": "^4.0.12"
   },
   "devDependencies": {
