--- a/demo/package.json
+++ b/demo/package.json
@@ -16,6 +16,8 @@
     "pdfjs-dist": "^4.10.38",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
+    "react-icons": "^5.5.0",
     "react-pdf": "^9.2.1",
     "react-router-dom": "^7.3.0",
     "swr": "^2.3.3",
